Bug 831831: Don't ignore incoming RTCP; don't make webrtc code think no bytes were sent r=ekr